Cambiar enfoque a arquitectura en melamina: actualizar fondo hero y menÃº

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="#inicio">EF Studio</a>
         </div>
         <nav class="nav">
-            <a href="#inicio">Arquitectura</a>
+            <a href="#inicio">Inicio</a>
             <a href="#proyectos">Proyectos</a>
             <a href="melamina/index.html">Melamina</a>
             <a href="#contacto">Contacto</a>
