--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <section class="hero" id="inicio">
             <div class="hero-overlay"></div>
             <div class="hero-content">
-                <h1>Arquitectura y diseño</h1>
+                <h1>Arquitectura en melamina</h1>
                 <p>Espacios pensados desde la función, el detalle y la materialidad.</p>
             </div>
         </section>
