enfoque en melamina

--- a/estudio.html
+++ b/estudio.html
@@ -5,23 +5,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estudio - EF Studio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/arquitectura.css">
 </head>
 
 <body>
-    <header>
-        <nav>
-            <a href="index.html">Inicio</a>
-            <a href="proyectos.html">Proyectos</a>
-            <a href="estudio.html">Estudio</a>
-            <a href="contacto.html">Contacto</a>
-            <a href="melamina/">Melamina</a>
+    <header class="header">
+        <div class="logo">
+            <a href="index.html">EF Studio</a>
+        </div>
+        <nav class="nav">
+            <a href="index.html#inicio">Inicio</a>
+            <a href="index.html#proyectos">Proyectos</a>
+            <a href="index.html#contacto">Contacto</a>
         </nav>
     </header>
     <main>
-        <h1>Estudio</h1>
+        <section class="intro" style="padding-top: 120px;">
+            <h1>Estudio</h1>
+        </section>
     </main>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
