--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EF Studio | Arquitectura</title>
+    <title>EF Studio | Arquitectura en Melamina</title>
 
     <!-- Tipografía -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,7 +25,6 @@
         <nav class="nav">
             <a href="#inicio">Inicio</a>
             <a href="#proyectos">Proyectos</a>
-            <a href="melamina/index.html">Melamina</a>
             <a href="#contacto">Contacto</a>
         </nav>
     </header>
@@ -37,44 +36,45 @@
             <div class="hero-overlay"></div>
             <div class="hero-content">
                 <h1>Arquitectura en melamina</h1>
-                <p>Espacios pensados desde la función, el detalle y la materialidad.</p>
+                <p>Espacios pensados desde la función, el detalle y la materialidad. Especializados en diseño y construcción con melamina.</p>
             </div>
         </section>
 
         <!-- INTRO -->
         <section class="intro">
             <p>
-                EF Studio es un estudio de arquitectura enfocado en el diseño
-                contemporáneo, la precisión técnica y la construcción de espacios
-                funcionales y atemporales.
+                EF Studio es un estudio de arquitectura especializado en el diseño
+                y construcción con melamina. Nos enfocamos en el diseño contemporáneo,
+                la precisión técnica y la construcción de espacios funcionales y atemporales
+                donde la melamina es protagonista.
             </p>
         </section>
 
         <!-- PROYECTOS -->
         <section class="projects" id="proyectos">
-            <h2>Proyectos</h2>
+            <h2>Proyectos en melamina</h2>
 
             <div class="projects-grid">
                 <article class="project">
-                    <img src="assets/img/proyecto-1.jpg" alt="Vivienda unifamiliar">
+                    <img src="assets/img/melamina-1.jpg" alt="Proyecto en melamina">
                     <div class="project-info">
-                        <h3>Vivienda unifamiliar</h3>
+                        <h3>Cocina integral</h3>
                         <span>Buenos Aires · 2024</span>
                     </div>
                 </article>
 
                 <article class="project">
-                    <img src="assets/img/proyecto-2.jpg" alt="Reforma integral">
+                    <img src="assets/img/melamina-2.jpg" alt="Proyecto en melamina">
                     <div class="project-info">
-                        <h3>Reforma integral</h3>
+                        <h3>Placard a medida</h3>
                         <span>Córdoba · 2023</span>
                     </div>
                 </article>
 
                 <article class="project">
-                    <img src="assets/img/proyecto-3.jpg" alt="Local comercial">
+                    <img src="assets/img/melamina-3.jpg" alt="Proyecto en melamina">
                     <div class="project-info">
-                        <h3>Local comercial</h3>
+                        <h3>Mobiliario integral</h3>
                         <span>Rosario · 2022</span>
                     </div>
                 </article>
